# MIPT-Formal-Practice2

./: Algo.cpp  Algo.h  CMakeLists.txt  Grammar.cpp  Grammar.h  GrammarRule.cpp  GrammarRule.h  README.md  Situation.cpp  Situation.h  main.cpp  test.cpp  tests.cpp
coverage-info/: index-sort-f.html  index-sort-l.html  index.html
coverage-info/v1/: __functional_base.func-sort-c.html  __functional_base.func.html  __functional_base.gcov.html  __locale.func-sort-c.html  __locale.func.html  __split_buffer.gcov.html  __string.func-sort-c.html  __string.func.html  __tree.func-sort-c.html  __tree.gcov.html  algorithm.func-sort-c.html  algorithm.gcov.html  initializer_list.func-sort-c.html  initializer_list.func.html  ios.func-sort-c.html  ios.func.html  ios.gcov.html  iterator.func-sort-c.html  iterator.func.html  limits.func-sort-c.html  limits.gcov.html  locale.func-sort-c.html  locale.gcov.html  memory.func-sort-c.html  memory.func.html  new.func-sort-c.html  new.gcov.html  ostream.func.html  ostream.gcov.html  set.func.html  stdexcept.func.html  stdexcept.gcov.html  streambuf.func-sort-c.html  streambuf.func.html  string.func-sort-c.html  string.func.html  string.gcov.html  tuple.gcov.html  type_traits.func-sort-c.html  type_traits.func.html  (+5 more)
googletest-master/googlemock/scripts/: fuse_gmock_files.py  pump.py
googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc
googletest-master/googletest/scripts/: gen_gtest_pred_impl.py  upload.py
googletest-master/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
googletest-master/googletest/test/: googletest-death-test-test.cc  googletest-filter-unittest_.cc  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-printers-test.cc  gtest-unittest-api_test.cc  gtest_unittest.cc
(+29 files in other folders)
